added clientzip false

--- a/addon.config.json
+++ b/addon.config.json
@@ -27,5 +27,9 @@
     "CPISide": [
       "addon-cpi-simcha.ts"
     ]
-  }
+  },
+  "AddonPackage": 
+  {
+      "ClientZip": false                                     
+   }
 }
