--- a/addon.config.json
+++ b/addon.config.json
@@ -1,6 +1,6 @@
 {
   "AddonUUID": "eb26afcd-3cf2-482e-9ab1-b53c41a6adbe",
-  "AddonVersion": "0.0.821",
+  "AddonVersion": "0.0.822",
   "DebugPort": 4400,
   "WebappBaseUrl": "https://app.sandbox.pepperi.com",
   "DefaultEditor": "editor",
@@ -28,8 +28,7 @@
       "addon-cpi-simcha.ts"
     ]
   },
-  "AddonPackage": 
-  {
-      "ClientZip": false                                     
-   }
+  "AddonPackage": {
+    "ClientZip": false
+  }
 }
