callback_encoded_url test added

--- a/addon.config.json
+++ b/addon.config.json
@@ -7,7 +7,8 @@
   "Endpoints": [
     "installation.js",
     "tests.ts",
-    "logger.ts"
+    "logger.ts",
+    "async_test.ts"
   ],
   "Editors": [
     "editor"
