survey now has the versions of: to di-28307

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "@pepperi-addons/papi-sdk": "^1.45.3",
-    "@pepperi-addons/scripts": "^2.0.16"
+    "@pepperi-addons/scripts": "^2.0.16",
+    "chromedriver": "^127.0.2"
   }
 }
