--- a/cpi-side/package.json
+++ b/cpi-side/package.json
@@ -14,7 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@pepperi-addons/cpi-node": "^1.2.1",
+    "@pepperi-addons/cpi-node": "1.2.1",
     "lodash.clonedeep": "^4.5.0",
     "rollup-plugin-typescript2": "^0.30.0",
     "shared-cpi-automation": "file:../shared"
